syntax = "proto3";

package jito;

service JitoService {
    rpc SendBundle (SendBundleRequest) returns (SendBundleResponse);
    rpc GetTipAccounts (GetTipAccountsRequest) returns (GetTipAccountsResponse);
    rpc GetBundleStatuses (GetBundleStatusesRequest) returns (GetBundleStatusesResponse);
}

message SendBundleRequest {
    repeated string transactions = 1;
    optional string uuid = 2;
}

message SendBundleResponse {
    string bundle_id = 1;
    string status = 2;
}

message GetTipAccountsRequest {
    optional string uuid = 1;
}

message GetTipAccountsResponse {
    repeated string accounts = 1;
}

message GetBundleStatusesRequest {
    repeated string bundle_uuids = 1;
    optional string uuid = 2;
}

message GetBundleStatusesResponse {
    repeated BundleStatus statuses = 1;
}

message BundleStatus {
    string bundle_id = 1;
    string status = 2;
    optional uint64 landed_slot = 3;
} 